--- a/src/assets/styles/modules/panel.scss
+++ b/src/assets/styles/modules/panel.scss
@@ -51,6 +51,10 @@
   }
 
   &__container {
+    padding: 10px 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 5px 15px;
+    }
     max-width: 280px;
     display: flex;
     align-items: center;
